# CatMesh

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  LICENSE  README.md
shaders/: basic.frag  basic.vert  shadow.frag
src/: main.cpp
src/Platform/: Window.cpp  Window.h
src/app/: Application.cpp  Application.h  FileDialog.cpp  FileDialog.h  SceneDocument.cpp  SceneDocument.h  SceneIO.cpp  SceneIO.h  SceneTypes.h
src/core/: Camera.cpp  Camera.h  Command.cpp  Command.h  Grid.cpp  Grid.h  ImageLoader.cpp  ImageLoader.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
src/ui/: Localization.cpp  Localization.h  Themes.cpp  Themes.h  UI.cpp  UI.h
